More work on archives.

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -1,10 +1,12 @@
 <%- partial('partial/navbar'); %>
 <div class="page-head">
-<div class="hidden-md-lg">
+<div class="content hidden-md-lg">
+  <h2 class="section-title">Archive List</h2>
   <%- partial('partial/archive_list'); %>
 </div>
 <div class="grid">
   <div class="cell-md-3 cell-lg-4 hidden-sm">
+    <h2 class="section-title">Archive List</h2>
     <%- partial('partial/archive_list'); %>
   </div>
   <div class="cell-sm-12 cell-md-9 cell-lg-8">
