Improved the 'accordian' menu.

--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -2,12 +2,12 @@
 <div class="page-head">
 <div class="content hidden-md-lg">
   <h2 class="section-title">Archive List</h2>
-  <%- partial('partial/archive_list'); %>
+  <%- partial('partial/archive_list', {tag:"sm_"}); %>
 </div>
 <div class="grid">
   <div class="cell-md-3 cell-lg-4 hidden-sm">
     <h2 class="section-title">Archive List</h2>
-    <%- partial('partial/archive_list'); %>
+    <%- partial('partial/archive_list', {tag:"norm_"}); %>
   </div>
   <div class="cell-sm-12 cell-md-9 cell-lg-8">
     <% if(page.posts.length > 0){ %>
